--- a/a1_SearchAlgos/AI_SearchAlgos/AI_SearchAlgos.csproj
+++ b/a1_SearchAlgos/AI_SearchAlgos/AI_SearchAlgos.csproj
@@ -64,7 +64,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Search\BreadthFirstSearch.cs" />
     <Compile Include="Search\SearchProblem.cs" />
+    <Compile Include="Search\SearchResults.cs" />
     <Compile Include="Utils\StringUtils.cs" />
     <Compile Include="Utils\Logger.cs" />
     <Compile Include="MainWindow.xaml.cs">
