--- a/a1_SearchAlgos/AI_SearchAlgos/AI_SearchAlgos.csproj
+++ b/a1_SearchAlgos/AI_SearchAlgos/AI_SearchAlgos.csproj
@@ -65,6 +65,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Search\BreadthFirstSearch.cs" />
+    <Compile Include="Search\DepthFirstSearch.cs" />
     <Compile Include="Search\SearchProblem.cs" />
     <Compile Include="Search\SearchResults.cs" />
     <Compile Include="Utils\StringUtils.cs" />
