Added Iterative Deepening, BFS, and Heuristics
Moved some of the common functionality to a SearchHelper. Implemented
the two admissible heuristics.

--- a/a1_SearchAlgos/AI_SearchAlgos/AI_SearchAlgos.csproj
+++ b/a1_SearchAlgos/AI_SearchAlgos/AI_SearchAlgos.csproj
@@ -64,9 +64,15 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Search\AStarSearch.cs" />
+    <Compile Include="Search\BestFirstSearch.cs" />
     <Compile Include="Search\BreadthFirstSearch.cs" />
     <Compile Include="Search\DepthFirstSearch.cs" />
-    <Compile Include="Search\IterativeDeepeningDFS.cs" />
+    <Compile Include="Search\Heuristics\EuclidianDistance.cs" />
+    <Compile Include="Search\Heuristics\Heuristic.cs" />
+    <Compile Include="Search\Heuristics\TileDistanceHeuristic.cs" />
+    <Compile Include="Search\IterativeDeepeningSearch.cs" />
+    <Compile Include="Search\Helper.cs" />
     <Compile Include="Search\SearchManager.cs" />
     <Compile Include="Search\SearchProblem.cs" />
     <Compile Include="Search\SearchResults.cs" />
