--- a/a1_SearchAlgos/AI_SearchAlgos/AI_SearchAlgos.csproj
+++ b/a1_SearchAlgos/AI_SearchAlgos/AI_SearchAlgos.csproj
@@ -68,11 +68,14 @@
     <Compile Include="Search\BestFirstSearch.cs" />
     <Compile Include="Search\BreadthFirstSearch.cs" />
     <Compile Include="Search\DepthFirstSearch.cs" />
+    <Compile Include="Search\DuplicateKeyComparer.cs" />
     <Compile Include="Search\Heuristics\EuclidianDistance.cs" />
     <Compile Include="Search\Heuristics\Heuristic.cs" />
     <Compile Include="Search\Heuristics\TileDistanceHeuristic.cs" />
+    <Compile Include="Search\ISearchAlgorithm.cs" />
     <Compile Include="Search\IterativeDeepeningSearch.cs" />
     <Compile Include="Search\Helper.cs" />
+    <Compile Include="Search\SearchExecution.cs" />
     <Compile Include="Search\SearchManager.cs" />
     <Compile Include="Search\SearchProblem.cs" />
     <Compile Include="Search\SearchResults.cs" />
