Hill Climb Search Created, UI Finished
Hill Climb Search was added, made the default constructors of Heuristic
using algos to private. Updated and finished the UI.

--- a/a1_SearchAlgos/AI_SearchAlgos/AI_SearchAlgos.csproj
+++ b/a1_SearchAlgos/AI_SearchAlgos/AI_SearchAlgos.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Search\Heuristics\EuclidianDistance.cs" />
     <Compile Include="Search\Heuristics\Heuristic.cs" />
     <Compile Include="Search\Heuristics\TileDistanceHeuristic.cs" />
+    <Compile Include="Search\HillClimbSearch.cs" />
     <Compile Include="Search\ISearchAlgorithm.cs" />
     <Compile Include="Search\IterativeDeepeningSearch.cs" />
     <Compile Include="Search\Helper.cs" />
