Fixes and Tweaking
Random fix for Generators, Updates to Manager and Problem to do Path
Lengths in results.

--- a/a1_SearchAlgos/AI_SearchAlgos/AI_SearchAlgos.csproj
+++ b/a1_SearchAlgos/AI_SearchAlgos/AI_SearchAlgos.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Search\SearchProblem.cs" />
     <Compile Include="Search\SearchResults.cs" />
     <Compile Include="Search\SortedList.cs" />
+    <Compile Include="Utils\RandomFix.cs" />
     <Compile Include="Utils\StringUtils.cs" />
     <Compile Include="Utils\Logger.cs" />
     <Compile Include="MainWindow.xaml.cs">
