ignore temp files.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,20 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+a1_SearchAlgos/AI_SearchAlgos/bin/Debug/AI_SearchAlgos.vshost.exe.manifest
+a1_SearchAlgos/AI_SearchAlgos/bin/Debug/AI_SearchAlgos.vshost.exe.config
+a1_SearchAlgos/AI_SearchAlgos/obj/Debug/App.g.i.cs
+a1_SearchAlgos/AI_SearchAlgos/obj/Debug/MainWindow.g.i.cs
+a1_SearchAlgos/AI_SearchAlgos/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+a1_SearchAlgos/AI_SearchAlgos/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+a1_SearchAlgos/AI_SearchAlgos/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+a1_SearchAlgos/TestBed/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+a1_SearchAlgos/TestBed/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+a1_SearchAlgos/TestBed/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+a2_logic/propositional_engine/prositional_logic_engine/bin/Debug/prositional_logic_engine.vshost.exe.config
+a2_logic/propositional_engine/prositional_logic_engine/bin/Debug/prositional_logic_engine.vshost.exe.manifest
+a2_logic/propositional_engine/prositional_logic_engine/obj/Debug/App.g.i.cs
+a2_logic/propositional_engine/prositional_logic_engine/obj/Debug/MainWindow.g.i.cs
+a2_logic/propositional_engine/prositional_logic_engine/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+a2_logic/propositional_engine/prositional_logic_engine/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+a2_logic/propositional_engine/prositional_logic_engine/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
