--- a/a2_logic/propositional_engine/prositional_logic_engine/prositional_logic_engine.csproj
+++ b/a2_logic/propositional_engine/prositional_logic_engine/prositional_logic_engine.csproj
@@ -53,6 +53,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="VariableAssignmentElement.xaml.cs">
+      <DependentUpon>VariableAssignmentElement.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -66,6 +69,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="VariableAssignmentElement.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ParseEngine.cs" />
