Ignore temp failes

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,12 @@ a2_logic/propositional_engine/prositional_logic_engine/obj/Debug/MainWindow.g.i.
 a2_logic/propositional_engine/prositional_logic_engine/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
 a2_logic/propositional_engine/prositional_logic_engine/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 a2_logic/propositional_engine/prositional_logic_engine/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+a2_logic/pLogicEngine/obj/Debug/MainWindow.g.i.cs
+a2_logic/pLogicEngine/obj/Debug/pLogicEngine.csproj.FileListAbsolute.txt
+a2_logic/pLogicEngine/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+a2_logic/pLogicEngine/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+a2_logic/pLogicEngine/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+a2_logic/pLogicEngine/obj/Debug/VariableAssignmentElement.g.i.cs
+a2_logic/pLogicEngineTests/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+a2_logic/pLogicEngineTests/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+a2_logic/pLogicEngineTests/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
