--- a/a2_logic/pLogicEngineTests/pLogicEngineTests.csproj
+++ b/a2_logic/pLogicEngineTests/pLogicEngineTests.csproj
@@ -53,7 +53,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OpTests.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="ParseTreeTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\pLogicEngine\pLogicEngine.csproj">
